# aoc-2022

./: .gitignore  LICENSE  README.md  go.mod  pom.xml  pyproject.toml  run_all.sh  start.sh
.github/workflows/: test-and-execute.yml
aoc2018/day07/: aoc2018day07.go  aoc2018day07_test.go
aoc2018/day14/: aoc2018day14.go  aoc2018day14_test.go
aoc2018day14/: aoc2018day14.go  aoc2018day14_test.go
other/runningsum/: runningsum_test.go
runningsum/: runningsum.go  runningsum_test.go
src/main/java/com/barneyb/aoc/aoc2015/: IWasToldThereWouldBeNoMath.java  NotQuiteLisp.java
src/main/java/com/barneyb/aoc/leetcode/: ListWithCycle.java  LongestPalindrome.java  MaxProfit.java  Stickers.java
src/main/java/com/barneyb/aoc/pry/: Model.java
src/main/java/com/barneyb/aoc/util/: AocdInputSupplier.java  CharIterator.java  CharSequence.kt  Chars.java  Dir.java  (+12 more)
src/main/java/com/barneyb/leetcode/: ListWithCycle.java  LongestPalindrome.java  MaxProfit.java  Stickers.java
src/main/java/com/barneyb/pry/: Model.java
src/main/java/com/barneyb/util/: Chars.java  Dir.java  HashMap.kt  HashSet.kt  Hist.java  IntPair.java  Iterable.kt  Linked.kt  MappingIterator.kt  MinPQ.kt  Pair.java  Parse.java  Queue.kt  Ratio.java  Rect.kt  Stack.kt  Timing.java  Vec2.java  Vec3.java  With.java
src/main/resources/: 10000_letters.txt  1000_letters.txt  hamlet_act1.txt
src/test/java/com/barneyb/aoc/: NotInCI.java
src/test/java/com/barneyb/util/: HashMapTest.kt  MinPQTest.kt  QueueTest.kt  RatioTest.java  StackTest.kt  Vec2Test.java
util/: aoc_all_2022.py  equal.go  must.go  solvers.txt
(+136 files in other folders)
