[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages]
find = { }

[project]
name = "barneyb-aoc-2022"
description = "My Advent of Code 2022 solvers"
authors = [
    { name = "Barney Boisvert", email = "bboisvert@gmail.com" }
]
version = "2024.1"
requires-python = ">= 3.11"
dependencies = []

[project.entry-points."barneyb_aoc_all.support"]
kotlin22 = "util.aoc_all_2022:support"
[project.entry-points."barneyb_aoc_all.solve"]
kotlin22 = "util.aoc_all_2022:solve"
